task #3529 Для начала, просто копируем imx28evk и cfa10057

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "tionpro28"
 BBFILE_PATTERN_tionpro28 = "^${LAYERDIR}/"
 BBFILE_PRIORITY_tionpro28 = "6"
+
+LAYERDEPENDS_crystalfontz = "fsl-arm fsl-arm-extra"
