--- a/conf/machine/tionpro28.conf
+++ b/conf/machine/tionpro28.conf
@@ -1,38 +1,36 @@
 #@TYPE: Machine
-#@NAME: tionpro28
+#@NAME: Tion-Pro28 
+#@SOC: i.MX28
+#@DESCRIPTION: Machine configuration for Tion-Pro28
+#@MAINTAINER: Tengiz Sharafiev <btolfa@gmail.com>
 
-#@DESCRIPTION: Machine configuration for tionpro28 systems
+include conf/machine/include/mxs-base.inc
 
+SOC_FAMILY = "mxs:mx28:tionpro28"
 
-# Ship all kernel modules by default
-MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
+IMXBOOTLETS_MACHINE = "iMX28_EVK"
 
-# Allow for MMC booting (required by the NAND-less Beagleboard XM)
-EXTRA_IMAGEDEPENDS += "u-boot"
+UBOOT_CONFIG ??= "sd"
+UBOOT_CONFIG[sd] = "mx28evk_config,sdcard"
+UBOOT_CONFIG[sd-auart-console] = "mx28evk_auart_console_config,sdcard"
+
 
 # Uncomment the following line to enable the hard floating point abi. Note that
 # this breaks some binary libraries and 3D (neither of which ship with
 # meta-yocto). For maximum compatibility, leave this disabled.
 #DEFAULTTUNE ?= "cortexa8hf-neon"
-include conf/machine/include/tune-arm926ejs.inc
+#include conf/machine/include/tune-arm926ejs.inc
 
-IMAGE_FSTYPES += "tar.bz2 jffs2"
-EXTRA_IMAGECMD_jffs2 = "-lnp "
+IMAGE_FSTYPES ?= "tar.bz2 jffs2 ext3 uboot.mxsboot-sdcard sdcard"
+SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
+
+SERIAL_CONSOLE = "115200 ttyAMA0"
 
 # 2.6.37 and later kernels use OMAP_SERIAL, ttyO2
 # earlier kernels use ttyS2
-SERIAL_CONSOLE = "115200 ttyO2"
-
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-custom"
 
-
-KERNEL_IMAGETYPE = "zImage"
-KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/omap3-beagle.dts ${S}/arch/arm/boot/dts/omap3-beagle-xm.dts"
-
-SPL_BINARY = "MLO"
-UBOOT_SUFFIX = "img"
-UBOOT_MACHINE = "omap3_beagle_config"
-UBOOT_ENTRYPOINT = "0x40008000"
-UBOOT_LOADADDRESS = "0x40008000"
+KERNEL_IMAGETYPE = "uImage"
+KERNEL_DEVICETREE = "imx28-evk.dtb"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat alsa"
