task #3529 bsp полностью собралась - необходимо протестировать

--- a/conf/machine/tionpro28.conf
+++ b/conf/machine/tionpro28.conf
@@ -31,6 +31,6 @@ SERIAL_CONSOLE = "115200 ttyAMA0"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-custom"
 
 KERNEL_IMAGETYPE = "uImage"
-KERNEL_DEVICETREE = "imx28-evk.dtb"
+#KERNEL_DEVICETREE = "imx28-evk.dtb"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat alsa"
