Change kernel image file type to zImage

--- a/conf/machine/tionpro28.conf
+++ b/conf/machine/tionpro28.conf
@@ -26,6 +26,6 @@ SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
 
 SERIAL_CONSOLE = "115200 ttyAMA0"
 
-KERNEL_IMAGETYPE = "uImage"
+KERNEL_IMAGETYPE = "zImage"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat alsa"
