--- a/conf/machine/tionpro28.conf
+++ b/conf/machine/tionpro28.conf
@@ -4,7 +4,7 @@
 #@DESCRIPTION: Machine configuration for Tion-Pro28
 #@MAINTAINER: Tengiz Sharafiev <btolfa@gmail.com>
 
-include conf/machine/include/mxs-base.inc
+include conf/machine/include/my_mxs-base.inc
 
 SOC_FAMILY = "mxs:mx28:tionpro28"
 
@@ -14,14 +14,9 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx28evk_config,sdcard"
 UBOOT_CONFIG[sd-auart-console] = "mx28evk_auart_console_config,sdcard"
 
+KERNEL_DEVICETREE = "imx28-tion-pro28.dtb"
 
-# Uncomment the following line to enable the hard floating point abi. Note that
-# this breaks some binary libraries and 3D (neither of which ship with
-# meta-yocto). For maximum compatibility, leave this disabled.
-#DEFAULTTUNE ?= "cortexa8hf-neon"
-#include conf/machine/include/tune-arm926ejs.inc
-
-IMAGE_FSTYPES ?= "tar.bz2 jffs2 ext3 uboot.mxsboot-sdcard sdcard"
+IMAGE_FSTYPES ?= "tar.bz2 ext3 sdcard"
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
 
 SERIAL_CONSOLE = "115200 ttyAMA0"
