--- a/conf/machine/tionpro28.conf
+++ b/conf/machine/tionpro28.conf
@@ -8,19 +8,16 @@ include conf/machine/include/my_mxs-base.inc
 
 SOC_FAMILY = "mxs:mx28:tionpro28"
 
-IMXBOOTLETS_MACHINE = "iMX28_EVK"
-
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx28evk_config,sdcard"
 UBOOT_CONFIG[sd-auart-console] = "mx28evk_auart_console_config,sdcard"
 
+KERNEL_IMAGETYPE = "zImage"
 KERNEL_DEVICETREE = "imx28-tion-pro28.dtb"
 
-IMAGE_FSTYPES ?= "tar.bz2 ext3 sdcard"
+IMAGE_FSTYPES ?= "tar.bz2 ext3 uboot.mxsboot-sdcard sdcard"
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
 
 SERIAL_CONSOLE = "115200 ttyAMA0"
-
-KERNEL_IMAGETYPE = "zImage"
 
 MACHINE_FEATURES = "usbgadget usbhost vfat alsa"
