--- a/conf/machine/tionpro28k41.conf
+++ b/conf/machine/tionpro28k41.conf
@@ -4,20 +4,20 @@
 #@DESCRIPTION: Machine configuration for Tion-Pro28
 #@MAINTAINER: Tengiz Sharafiev <btolfa@gmail.com>
 
-include conf/machine/include/my_mxs-base.inc
+include conf/machine/include/imx-base.inc
+include conf/machine/include/tune-arm926ejs.inc
 
-SOC_FAMILY = "mxs:mx28:tionpro28"
+SOC_FAMILY = "mxs:mx28"
+
+IMXBOOTLETS_MACHINE = "iMX28_EVK"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx28evk_config,sdcard"
+UBOOT_CONFIG[nand] = "mx28evk_nand_config,ubifs"
 UBOOT_CONFIG[sd-auart-console] = "mx28evk_auart_console_config,sdcard"
 
-KERNEL_IMAGETYPE = "zImage"
-KERNEL_DEVICETREE = "imx28-tion-pro28.dtb"
-
-IMAGE_FSTYPES ?= "tar.bz2 ext3 uboot.mxsboot-sdcard sdcard"
-SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
+KERNEL_DEVICETREE = "imx28-tion.dtb"
 
 SERIAL_CONSOLE = "115200 ttyAMA0"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat alsa"
+MACHINE_FEATURES = "apm usbgadget usbhost vfat alsa"
